--- a/Projeto 3/index.html
+++ b/Projeto 3/index.html
@@ -1,4 +1,17 @@
 <!DOCTYPE html>
 <html>
-    
+
+
+<head>
+   <meta charset="UTF-8">
+   <meta name="viiewport" content="width=device-width, initial-scale=1.0">
+   <title>AluraBooks</title>
+   <link rel="stylesheet" href="reset.css">
+   <link rel="stylesheet" href="style.css">
+</head>
+
+    <body>
+     <h1>Alurabook</h1>
+    </body>
+
 </html>
